--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splidejs/vue-splide": "^0.6.12",
+    "swiper": "^11.1.15",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
